feat: Initial commit to vote backend
